--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 
 body {
   margin: 0;
-  padding: 0;
-  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,4 +11,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root{
+  width: 100%;
+  height:100vh
+}
+.row{
+  margin: 50px 0;
+  flex-wrap: wrap;
 }
