--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -5,7 +5,7 @@
     background:white;
     width: 40%;
     padding: 10px 10px;
-    margin: 0 10px;
+    margin: 30px 10px;
     font-size: 16px;
 }
 .btnLarge:hover{
