--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
-
+@font-face {
+  font-family: "Space Grotesk";
+  src: local('Space Grotesk'),url("./assets/fonts/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf") format('truetype');
+}
+*{
+  font-family:"Space Grotesk",sans-serif;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Space Grotesk",sans-serif;
 }
 
 code {
