--- a/src/screens/homePage/HomePage.css
+++ b/src/screens/homePage/HomePage.css
@@ -83,4 +83,21 @@
     width: 100%;
     justify-content:start;
 }
+#BenefitsCards{
+    display:flex;
+    flex-direction: row;
+    flex:1;
+    justify-content: space-between;
+    align-items:center;
+
+}
+.borderRight1{
+    content:'';
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width:1px;
+    background-color:#ED3E3E
+}
 
