--- a/src/elements/card/card.css
+++ b/src/elements/card/card.css
@@ -6,9 +6,7 @@
     text-align: left;
     height:100%;
     border-bottom: 1px solid #ED3E3E;
-  
-    
-    
+    margin: 0px 20px;
 }
 .CardLast{
     display: flex;
@@ -17,7 +15,8 @@
     justify-content: space-between;
     text-align: left;
     height:100%;
-    padding-bottom: 30px;
+    margin:0px 20px;
+
    
 }
 
@@ -29,4 +28,10 @@
     text-align: left;
     height:100%;
     padding-bottom: 30px;
+}
+#cardAboutUs{
+    border-bottom: none !important;
+    height:50%;
+    align-self: center;
+    width:100%;
 }
