--- a/src/elements/text/text.css
+++ b/src/elements/text/text.css
@@ -2,7 +2,7 @@
     font-size:36px;
     font-weight:700;
     line-height: 54px;
-    margin: 10px;
+    margin: 10px 0px;
     font-style: medium;
 
 }
@@ -10,7 +10,7 @@
     font-size:28px;
     font-weight:700;
     line-height: 42px;
-    margin: 10px;
+    margin: 10px 0px;
     font-style: medium;
 
 }
@@ -18,20 +18,20 @@
     font-size:24px;
     font-weight:700;
     line-height: 36px;
-    margin: 10px;
+    margin: 10px 0px;
     font-style: medium;
 }
 .title-s{
     font-size:20px;
     font-weight:700;
     line-height: 30px;
-    margin: 10px;
+    margin: 10px 0px;
     font-style: normal;
 }
 .subtitle{
     font-size:16px;
     line-height:20px;
-    margin: 10px; 
+    margin: 10px 0px; 
     font-style: normal;
 }
 
