--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -28,3 +28,18 @@
     border-radius: 8px;
     color:white;
 }
+.btnSubmit {
+    display:inline-block;
+    border: 1.25px solid #ED3E3E;
+    border-radius: 8px;
+    color:#ED3E3E;
+    background:white;
+    width: 50%;
+    padding: 10px 10px;
+    font-size: 16px;
+}
+.btnSubmit:hover{
+    background: #ED3E3E;
+    border-radius: 8px;
+    color:white;
+}
