leveCost video explanation added

--- a/src/elements/levelCertification/levelCertification.css
+++ b/src/elements/levelCertification/levelCertification.css
@@ -10,3 +10,12 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.LevelInfo{
+    display: flex;
+    flex:1;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    padding: 0 10%;
+
+}
