--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 }
 *{
   font-family:"Space Grotesk",sans-serif;
+  padding:0;
+  margin:0;
 }
 body {
   margin: 0;
@@ -17,7 +19,6 @@ code {
 #root{
   width: 100%;
   height:100vh;
-  padding: 0 20px;
 }
 .row{
   margin: 70px 0;
