--- a/src/elements/costumPagination/costumePagination.css
+++ b/src/elements/costumPagination/costumePagination.css
@@ -1,6 +1,8 @@
 .pagination {
     justify-content: center;
-    margin: 20px 0;
+    margin: 20px 10%;
+    border-top: 1px solid #CDD0D2;
+    padding: 10px 0;
   }
   
   ul {
