--- a/src/screens/individualsList/individualsList.css
+++ b/src/screens/individualsList/individualsList.css
@@ -18,7 +18,6 @@
     background-repeat: no-repeat;
     background-position-x: 10px;
     text-indent: 20px;
-    text-align: center;
     padding: 10px;
     border: 1px solid #04151F;
     border-radius: 8px;
@@ -43,4 +42,46 @@
 .btnFilter:hover{
     background: white;
     color:#ED3E3E;
+}
+
+.btnDetails{
+    border: none;
+    color: #ED3E3E;
+    background:transparent;
+    font-size: 12px;
+    width: 100%;
+}
+.btnDetails:hover{
+    color:#04151F;
+}
+
+.modalTable{
+    width:100%;
+}
+.modalTable tr{
+    display:flex;
+    flex-direction: row;
+    flex: 1;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(4, 21, 31, 0.4);
+    padding: 15px 0;
+}
+.modalTable tr td {
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: 24px;
+letter-spacing: 0px;
+text-align: right;
+opacity: 60%;
+color:#04151F;
+
+
+}
+.modalTable tr:nth-last-child(1) td:last-child{
+    opacity: 100%;
+}
+
+.modalTable tr:nth-last-child(1){
+    border: none;
 }
