time line added level A added

--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -43,4 +43,8 @@
     border-radius: 8px;
     color:white;
 }
-
+.btnTimeLine{
+    border: none;
+    background:transparent;
+    color:#ED3E3E;
+}
