--- a/src/elements/text/text.css
+++ b/src/elements/text/text.css
@@ -52,6 +52,7 @@
 .subtitle{
     font-size:16px;
     line-height:20px;
+    font-weight:300;
     margin: 10px 0px; 
     font-style: normal;
     color:#04151F;
