--- a/src/elements/Iframe/iframe.css
+++ b/src/elements/Iframe/iframe.css
@@ -2,4 +2,7 @@
     overflow: hidden;
     border-radius: 8px;
     transform: translateZ(0px);
+    width: 100%;
+    height: 500px;
+    padding: 0 15%;
   }
