--- a/src/elements/levelCertification/levelCertification.css
+++ b/src/elements/levelCertification/levelCertification.css
@@ -85,3 +85,9 @@ border-radius: 16px;
 .hide{
     display: none;
 }
+
+.LevelBorder{
+    border-bottom: 1.5px solid rgba(4,21,31,0.4);
+    padding-bottom: 20px !important;
+    margin-bottom: 10px !important;
+}
