--- a/src/elements/levelCertification/levelCertification.css
+++ b/src/elements/levelCertification/levelCertification.css
@@ -20,6 +20,9 @@
 
 }
 .LevelForm{
+    width: 100%;
+    padding:0;
+    margin:0;
     height: 100vh;
     display: flex;
     flex-direction: column;
