--- a/src/elements/levelCertification/levelCertification.css
+++ b/src/elements/levelCertification/levelCertification.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    justify-content: space-around;
+    justify-content: center;
     height: 444px;
     padding: 0px 200px;
     text-align: center;
