--- a/src/elements/levelCertification/levelCertification.css
+++ b/src/elements/levelCertification/levelCertification.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     flex: 1;
     justify-content: center;
+    width:100vw;
     height: 444px;
-    padding: 0px 200px;
+    padding: 0px 20%;
     text-align: center;
     background: url("../../assets/ilustrations/levelBG_image.svg");
     background-repeat: no-repeat;
