--- a/src/elements/text/text.css
+++ b/src/elements/text/text.css
@@ -56,6 +56,7 @@
     margin: 10px 0px; 
     font-style: normal;
     color:#04151F;
+    padding:0;
     width: 100%;
     overflow-wrap: break-word;
     opacity: 70%;
