nav bar centered text

--- a/src/screens/navigation/navigation.css
+++ b/src/screens/navigation/navigation.css
@@ -52,9 +52,12 @@
        margin-top: 20px !important;
     }
 
-    .navbar-toggler{
+    .navbar-toggler, .dropdown-toggle{
        margin:0 auto ;
        
+    }
+    .dropdown-item{
+        text-align: center;
     }
     .navbar-nav{
         text-align: center;
