--- a/src/elements/card/card.css
+++ b/src/elements/card/card.css
@@ -6,7 +6,17 @@
     text-align: left;
     height:100%;
     border-bottom: 1px solid #ED3E3E;
-    margin: 0px 20px;
+    margin: 0px 20px 0px 0px ;
+}
+.CardR{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    height:100%;
+    border-bottom: 1px solid #ED3E3E;
+    margin: 0px 0px 0px 20px ;
 }
 .CardLast{
     display: flex;
@@ -17,6 +27,28 @@
     height:100%;
     margin:0px 20px;
 
+   
+}
+.CardLastL{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    height:100%;
+    margin: 0px 20px 0px 0px ;
+
+   
+}
+.CardLastR{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    height:100%;
+    margin:0px 20px;
+    margin: 0px 0px 0px 20px ;
    
 }
 
