--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,12 @@ code {
     monospace;
 }
 #root{
-  width: 100%;
-  height:100vh;
+  max-width: 1200px;
+  margin: 2% auto;
+
 }
 .row{
   margin: 70px 0;
-
   width:100%;
 }
 
