--- a/src/screens/navigation/navigation.css
+++ b/src/screens/navigation/navigation.css
@@ -50,6 +50,9 @@
     .col{
         text-align: center;
     }
+    .row{
+        margin: 20px 0 !important;
+    }
     .navIcons{
        text-align: center;
        margin-top: 20px !important;
