--- a/src/elements/Iframe/iframe.css
+++ b/src/elements/Iframe/iframe.css
@@ -1,8 +1,17 @@
 .iframeWraper {
     overflow: hidden;
     border-radius: 8px;
-    transform: translateZ(0px);
-    width: 100%;
-    height: 500px;
-    padding: 0 15%;
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    padding: 0% 0% 56.25% 0%;
   }
+  iframe{
+    position:absolute;
+    overflow: hidden;
+    top:0;
+    left:0;
+    width: 100% ;
+    height: 100%;
+  }
+ 
